--- a/Homeworks/Homework #1/HW1.tex
+++ b/Homeworks/Homework #1/HW1.tex
@@ -525,7 +525,7 @@ where $k+n-m \in \ZZ$ and $0 < k+n-m < m+n-m = n$.\\
 
 However, we know that the order of $x$ is $n$, which is defined to be the smallest positive integer of $x$ that yields the identity element. Hence, $e, x, x^2, \dots, x^{n-1}$ are all distinct.\\
 
-Suppose $x \in G$ where $G$ is a group. Then, $\{e, x, x^2, \dots, x^{n-1}\} \subset G$. Thus the $|x| = n$ and there are at least $n$ elements in $G$. Hence, we have that $|x| \leq |G|$.
+Suppose $x \in G$ where $G$ is a group. Then, $\{e, x, x^2, \dots, x^{n-1}\} \subset G$. Thus $|x| = n$ and there are at least $n$ elements in $G$. Hence, we have that $|x| \leq |G|$.
 \end{proof}
 
 
